# westac-statistics

./: .gitignore  README.md  common.py  corpus_tokenizer.py  parse_speakers_from_xml.py  protocol_reader.py  pyproject.toml  tf_idf_calculator.py  westac_histogram.py
docker/: Dockerfile  compose.yml  docker-compose.yml
docker/py_notebooks/: 0.10.0 - TF-IDF, NGRAMs, LIX, Word percentages.py  0.10.0_Statistics.py  0.11.0_Statistics.py  0.12.0_Statistics.py  0.13.0_Statistics.py  0.13.1_Statistics.py  0.14.0_Statistics.py  0.4.1_Statistics.py  0.4.2_Statistics.py  0.4.3_Statistics.py  0.4.5_Statistics.py  0.4.6_Statistics.py  0.5.0_Statistics.py  0.5.1_Statistics.py  0.6.0_Statistics.py  0.6.0_my_tf_idf.py  0.7.0_Statistics.py  0.8.0 - TF-IDF, NGRAMs, LIX, Word percentages.py  0.8.0_Statistics.py  0.8.0_my_tf_idf.py  0.9.0 - TF-IDF, NGRAMs, LIX, Word percentages.py  0.9.0_Statistics.py  v2024.06.19 - TF-IDF, NGRAMs, LIX, Word percentages.py  v2024.06.19_Statistics.py
docker/reference_files/: predetermined_stop_words.xlsx
docker/scripts/: notebook_to_py.sh  py_to_notebook.sh
westac-statistics/: case_one_gui.py
westac_statistics/: .pylintrc  case_one_gui.py  corpus_fast_tokenizer.py  corpus_parser.py  corpus_tokenizer.py  dataframe_optimizer.py  git_repository.py  metadata_parser.py  parse_speakers_from_xml.py  term_frequency.py  tf_idf_calculator.py
westac_statistics/.ipynb_checkpoints/: git_repository-checkpoint.py
