
[tool.poetry]
name = "westac-statistics"
version = "0.2.5"
description = "Python statistics package for WeStAc, and the Swedish parliamentary proceedings"
authors = ["TomasSkotare <tomas.skotare@umu.se>"]
repository = "https://github.com/TomasSkotare/westac-statistics"
license = "MIT"
readme = "README.md"
packages = [{include = "westac-statistics"}]


[tool.poetry.dependencies]
python = "==3.11.*"
numpy = "*"
scipy = "*"
pandas = "*"
tqdm = "*"
numba = "*"
plotly = "*"
bs4 = "*"
nltk = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
